crates/icydb-core/tests/ui/validate_module_private.stderr
error[E0603]: module `validate` is private
 --> tests/ui/validate_module_private.rs:1:26
  |
1 | use icydb_core::visitor::validate::ValidateVisitor;
  |                          ^^^^^^^^ private module
  |
note: the module `validate` is defined here
 --> src/visitor/mod.rs
  |
  | pub(crate) mod validate;
  | ^^^^^^^^^^^^^^^^^^^^^^^
